# Demo-Mesh-Predictor

./: .gitignore  Dockerfile  README.md  pyproject.toml
charts/: helmfile.yaml
charts/argocd/: application.yaml
charts/demo-mesh-predictor/: values.yaml
charts/demo-mesh-predictor/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  service.yaml  serviceaccount.yaml
charts/test-wrapper/: Chart.yaml  README.md  values.yaml
charts/test-wrapper/templates/: NOTES.txt  buildconfig.yaml  imagestream.yaml  ingress.yaml  pvc.yaml  route.yaml  trigger-build-job.yaml
charts/test-wrapper/templates/tests/: test-connection.yaml
scripts/: build.sh
src/: main.py
