[project]
name = "test-wrappers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Brian Duenas", email = "brian.duenas@ibm.com" }
]
requires-python = ">=3.11"
dependencies = [
    "openad_service_utils @ git+https://github.com/acceleratedscience/openad_service_utils.git@mesh_domain",
]
